--- a/Product Review and rating form/index.html
+++ b/Product Review and rating form/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>PRODUCT-REVIEW-AND-RATING</title>
-        <link rel="stylesheet" href="css/Product-review-form.css">
+        <link rel="stylesheet" href="css/style.css">
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -200,6 +200,6 @@
                 </form>
             </div>
         </div>
-<script src="js/Product-review.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
