FIX CHECKBOX ISSUES

--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
                     <!--PRODUCT TAGS-->
                     <fieldset>
                         <legend>Product Tags</legend>
-                            <input type="checkbox" id="Best quality" name="Best quality">
+                            <input type="checkbox" id="Best Quality" name="Best Quality">
                             <label for="Best Quality"> Best Quality</label><br>
 
                             <input type="checkbox" id="Great Value" name="Great Value" >
                             <label for="Great Value">Great Value</label><br>
 
                             <input type="checkbox" id="Good Packaging" name="Good Packaging">
-                            <label for="Great Value">Good Packaging</label><br>
+                            <label for="Good Packaging">Good Packaging</label><br>
 
                             <input type="checkbox" id="Fast Delivery" name="Fast Delivery">
                             <label for="Fast Delivery">Fast Delivery</label><br>
